add enable order form alert

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,29 +1,5 @@
 {
-  "sortBy": "Řadit dle",
-  "order.journal.heading": "Deník objednávky",
-  "order.adminModeForm.completed.label" : "Objednávka dokončena",
-  "order.sortByOrders.createdAt.label":  "Datum",
-  "order.sortByOrders.pickupPointName.label":  "Odběrové místo",
-  "order.status.label": "Stav",
-  "order.status.completed": "Dokončena",
-  "order.orders.completed.heading": "Dokončené",
-  "order.status.active": "Aktivní",
-  "subscriptionsTable.pricePerDelivery.heading": "Cena za závoz",
-  "customer": "Zákazník",
-  "note": "Poznámka",
-  "dateOfCreation": "Datum vytvoření",
-  "orderId": "Id objednávky",
-  "ok": "Ok",
-  "subscriptionsPage.submit.success.text": "Objednávka byla úspěšně odeslána farmáři",
-  "subscriptionsPage.submit.button": "Odeslat objednávku",
-  "subscriptionsPage.customerData.heading": "Kontaktní údaje",
-  "fullname": "Jméno a příjmení",
-  "howItWorks?": "Jak to funguje?",
-  "subscriptionsPage.selectPickupPointHeading": "Vyber odběrové místo",
-  "subscriptionsPage.selectSubscriptionHeading": "Vyber předplatné",
   "aboutFarm": "O Farmě",
-  "subscriptionsTable.priceHeading": "Price",
-  "subscriptionsTable.numberOfDeliveriesHeading": "Počet závozů (ks)",
   "accommodation.heading": "Ubytování",
   "address": "Adresa",
   "addressLevel1Label": "Okres", 
@@ -34,6 +10,8 @@
   "contacts": "Kontakty",
   "continue": "Pokračovat",
   "createFarm": "Založ Farmu",
+  "customer": "Zákazník",
+  "dateOfCreation": "Datum vytvoření",
   "delete": "Smazat",
   "deleteDialog.text": "Smazat vybranou položku?",
   "email": "Email",
@@ -52,7 +30,9 @@
   "farmsPage.producingLabel": "Produkuje",
   "farmsTable.deliversToPlaceholder": "Město / PSČ",
   "firstName": "Jméno",
+  "fullname": "Jméno a příjmení",
   "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
+  "howItWorks?": "Jak to funguje?",
   "landingPage.contactDeveloper": "Nebo kontaktuje vývojáře",
   "landingPage.heading": "Lokální produkty přímo z farmy",
   "landingPage.howItWorks1": "Najdi farmu",
@@ -66,21 +46,29 @@
   "myFarm": "Moje Farma",
   "name": "Jméno",
   "no": "Ne",
+  "note": "Poznámka",
+  "ok": "Ok",
+  "order.adminModeForm.completed.label" : "Objednávka dokončena",
+  "order.journal.heading": "Deník objednávky",
+  "order.orders.completed.heading": "Dokončené",
+  "order.sortByOrders.createdAt.label":  "Datum",
+  "order.sortByOrders.pickupPointName.label":  "Odběrové místo",
+  "order.status.active": "Aktivní",
+  "order.status.completed": "Dokončena",
+  "order.status.label": "Stav",
   "order": "Objednávka",
-  "orders": "Objednávky",
+  "orderId": "Id objednávky",
   "orderPage.heading": "Objednávka #{{orderId}}",
+  "orders": "Objednávky",
   "password": "Heslo",
-  "pickupPoint.empty.text": "Tato farma zatím nemá žádná odběrová místa",
-  "subscription.empty.text": "Tato farma zatím nemá žádné předplatné",
-  "subscription.calculator.text": "Kontaktuj farmáře, pro vytvoření objednávky",
-  "subscription.calculator.heading": "Kalkulátor cen",
   "pc": "ks",
   "phoneNumber": "Telefonní číslo",
   "photoGallery.heading": "Fotogalerie",
   "pickupDayLabel": "Odběrový den",
   "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Frekvenci uveďte v poznámce objednávky.",
-  "pickupPoint": "Odběrové místo",
+  "pickupPoint.empty.text": "Tato farma zatím nemá žádná odběrová místa",
   "pickupPoint.isFarmPickupPoint.name": "Odběr z farmy",
+  "pickupPoint": "Odběrové místo",
   "pickupPoints": "Odběrová Místa",
   "pickupPointsPage.editDelete": "Editovat/Smazat",
   "postcode": "PSČ",
@@ -106,22 +94,35 @@
   "signUpPage.invalidEmail": "Neplatný email.",
   "signUpPage.newsletterCheckbox": "Chci novinky od FarmedBy na email.",
   "somethingWentWrong": "Něco se porouchalo",
+  "sortBy": "Řadit dle",
+  "subscription.calculator.heading": "Kalkulátor cen",
+  "subscription.calculator.text": "Kontaktuj farmáře, pro vytvoření objednávky",
+  "subscription.empty.text": "Tato farma zatím nemá žádné předplatné",
+  "subscription.enableOrderForm.alert": "Přidej odběrové místo nebo povol odběry z farmy, pro zobrazení objednávkového formuláře předplatných",
+  "subscription.journal.placeholder": "Deník slouží tobě jako farmáři, pro zaznamenávání vývoje objednávky a měl jsi tak všechny informace při přípravě odběrů na jednom místě. Zákazník deník nevidí.\n\nPříklad použití:\n22.6.2021: První závoz\n29.6.2021: Druhý závoz\n6.7.2021: Třetí závoz\n13.7.2021: Zákazník požádal o odložení závozu kvůli dovolené\n20.7.2021: Čtvrtý závoz\n...\n14.9.2021: Poslední závoz - objednávka dokončena",
+  "subscription.subscriptions.heading": "Předplatné",
   "subscriptionEditor.contentPlaceholder": "Různá sezonní zelenina",
   "subscriptionEditor.heading": "Editor předplatného",
   "subscriptionEditor.namePlaceholder": "Velká zeleninová bedýnka",
   "subscriptionEditor.numberOfDeliveries": "Od počtu závozů",
   "subscriptionEditor.pricePerDelivery": "Cena za závoz ({{currency}})",
+  "subscriptionsPage.customerData.heading": "Kontaktní údaje",
   "subscriptionsPage.howItWorks1": "Níže vytvoř objednávku",
   "subscriptionsPage.howItWorks2": "Vyčkej na email od farmáře s platebními údaji",
   "subscriptionsPage.howItWorks3": "Zaplať objednávku",
   "subscriptionsPage.howItWorks4": "Vyčkej na email s prvním datem závozu",
   "subscriptionsPage.howItWorks5": "Pravidelně vyzvedávej",
-  "subscriptionsPage.noteHeading": "Poznámka (zpětná vazba)",
   "subscriptionsPage.note.placeholder": "Například dej farmáři vědět jaká je tvoje oblíbená zelenina, aby věděl, čeho pěstovat více a čeho méně.\n\n\nOblíbená zelenina: paprika, rajče, mrkev, salát, okurka\n\nNeoblíbená zelenina: řapíkatý celer, kopr", 
-  "subscription.journal.placeholder": "Deník slouží tobě jako farmáři, pro zaznamenávání vývoje objednávky a měl jsi tak všechny informace při přípravě odběrů na jednom místě. Zákazník deník nevidí.\n\nPříklad použití:\n22.6.2021: První závoz\n29.6.2021: Druhý závoz\n6.7.2021: Třetí závoz\n13.7.2021: Zákazník požádal o odložení závozu kvůli dovolené\n20.7.2021: Čtvrtý závoz\n...\n14.9.2021: Poslední závoz - objednávka dokončena",
-  "subscription.subscriptions.heading": "Předplatné",
+  "subscriptionsPage.noteHeading": "Poznámka (zpětná vazba)",
+  "subscriptionsPage.selectPickupPointHeading": "Vyber odběrové místo",
+  "subscriptionsPage.selectSubscriptionHeading": "Vyber předplatné",
+  "subscriptionsPage.submit.button": "Odeslat objednávku",
+  "subscriptionsPage.submit.success.text": "Objednávka byla úspěšně odeslána farmáři",
   "subscriptionsPage.subscriptionContentHeading": "(Možný) obsah",
   "subscriptionsPage.subscriptionName": "Jméno předplatného",
+  "subscriptionsTable.numberOfDeliveriesHeading": "Počet závozů (ks)",
+  "subscriptionsTable.priceHeading": "Price",
+  "subscriptionsTable.pricePerDelivery.heading": "Cena za závoz",
   "subscriptionsTable.pricingHeading": "Ceník",
   "tryItLater": "Zkuste akci opakovat později.",
   "volunteers.heading": "Dobrovolníci",
