--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,29 +1,5 @@
 {
-  "order.journal.heading": "Order journal",
-  "order.status.label": "Status",
-  "order.sortByOrders.createdAt.label":  "Date",
-  "order.adminModeForm.completed.label" : "Order completed",
-  "order.sortByOrders.pickupPointName.label":  "Pickup point",
-  "sortBy": "Sort by",
-  "order.status.completed": "Completed",
-  "order.orders.completed.heading": "Completed",
-  "order.status.active": "Active",
-  "subscriptionsTable.pricePerDelivery.heading": "Price per delivery",
-  "customer": "Customer",
-  "note": "Note",
-  "dateOfCreation": "Date of creation",
-  "orderId" : "Order id",
-  "ok": "Ok",
-  "subscriptionsPage.submit.success.text": "The order has been successfully sent to the farmer",
-  "subscriptionsPage.customerData.heading": "Contact information",
-  "subscriptionsPage.submit.button": "Create order",
-  "fullname": "Fullname",
-  "howItWorks?": "How it works?",
-  "subscriptionsPage.selectPickupPointHeading": "Select pickup point",
-  "subscriptionsPage.selectSubscriptionHeading": "Select subscriptions",
   "aboutFarm": "About Farm",
-  "subscriptionsTable.numberOfDeliveriesHeading": "Deliveries (pc)",
-  "subscriptionsTable.priceHeading": "Price",
   "accommodation.heading": "Accommodation",
   "address": "Address",
   "addressLevel1Label": "State / Province / District", 
@@ -34,6 +10,8 @@
   "contacts": "Contacts",
   "continue": "Continue",
   "createFarm": "Create Farm",
+  "customer": "Customer",
+  "dateOfCreation": "Date of creation",
   "delete": "Delete",
   "deleteDialog.text": "Delete selected item?",
   "email": "Email",
@@ -52,7 +30,9 @@
   "farmsPage.producingLabel": "Producing",
   "farmsTable.deliversToPlaceholder": "City / Postcode",
   "firstName": "First name",
+  "fullname": "Fullname",
   "genericFailureMessage": "Something's wrong. Please try again later.",
+  "howItWorks?": "How it works?",
   "landingPage.contactDeveloper": "Or contact the developer",
   "landingPage.heading": "Local produce directly from a farm",
   "landingPage.howItWorks1": "Find farm",
@@ -66,21 +46,29 @@
   "myFarm": "My Farm",
   "name": "Name",
   "no": "No",
+  "note": "Note",
+  "ok": "Ok",
+  "order.adminModeForm.completed.label" : "Order completed",
+  "order.journal.heading": "Order journal",
+  "order.orders.completed.heading": "Completed",
+  "order.sortByOrders.createdAt.label":  "Date",
+  "order.sortByOrders.pickupPointName.label":  "Pickup point",
+  "order.status.active": "Active",
+  "order.status.completed": "Completed",
+  "order.status.label": "Status",
   "order": "Order",
-  "orders": "Orders",
+  "orderId" : "Order id",
   "orderPage.heading": "Order #{{orderId}}",
+  "orders": "Orders",
   "password": "Password",
   "pc": "pc",
   "phoneNumber": "Phone number",
   "photoGallery.heading": "Photo Gallery",
-  "pickupPoint.empty.text": "This farm hasn't got any pickup point yet",
-  "subscription.empty.text": "This farm hasn't got any subscriptions yet",
-  "subscription.calculator.text": "Contact the farmer to place an order",
-  "subscription.calculator.heading": "Price calculator",
   "pickupDayLabel": "Pickup day",
   "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm. Specify the frequency in the order note",
-  "pickupPoint": "Pickup point",
+  "pickupPoint.empty.text": "This farm hasn't got any pickup point yet",
   "pickupPoint.isFarmPickupPoint.name": "Pickup from farm",
+  "pickupPoint": "Pickup point",
   "pickupPoints": "Pickup Points",
   "pickupPointsPage.editDelete": "Edit/Delete",
   "postcode": "Postcode",
@@ -106,22 +94,35 @@
   "signUpPage.invalidEmail": "Invalid email",
   "signUpPage.newsletterCheckbox": "Subscribe to FarmedBy newsletter",
   "somethingWentWrong": "Something went wrong",
+  "sortBy": "Sort by",
+  "subscription.calculator.heading": "Price calculator",
+  "subscription.calculator.text": "Contact the farmer to place an order",
+  "subscription.empty.text": "This farm hasn't got any subscriptions yet",
+  "subscription.enableOrderForm.alert": "Add pickup point or set farm as pickup point to enable subscription order form",
+  "subscription.journal.placeholder": "The journal serves you as a farmer to document the progress of the order. The point is to have all necessary information in one place when preparing the delivery. The customer cannot see the journal\n\nUsage example:\n6/22/2021: First delivery\n6/29/2021: Second delivery\n7/6/2021: Third delivery\n7/13/2021: Customer requested to postpone one delivery because of a vacation\n7/20/2021: Fourth delivery\n...\n9/14/2021: Last delivery - order completed",
+  "subscription.subscriptions.heading": "Subscriptions",
   "subscriptionEditor.contentPlaceholder": "Various seasonal vegetables",
   "subscriptionEditor.heading": "Subscription editor",
-  "subscriptionsPage.noteHeading": "Note (feedback)",
-  "subscriptionsPage.note.placeholder": "For example, you can let the farmer know, what are your favorite vegetables, so he knows, what to grow more of and less of.\n\n\nFavorite vegetables: tomatoes, carrots, lettuce, cucumbers\n\nDisliked vegetables: celery stalks, dill",
-  "subscription.journal.placeholder": "The journal serves you as a farmer to document the progress of the order. The point is to have all necessary information in one place when preparing the delivery. The customer cannot see the journal\n\nUsage example:\n6/22/2021: First delivery\n6/29/2021: Second delivery\n7/6/2021: Third delivery\n7/13/2021: Customer requested to postpone one delivery because of a vacation\n7/20/2021: Fourth delivery\n...\n9/14/2021: Last delivery - order completed",
   "subscriptionEditor.namePlaceholder": "Vegetables for 4",
   "subscriptionEditor.numberOfDeliveries": "From number of deliveries",
   "subscriptionEditor.pricePerDelivery": "Price per delivery ({{currency}})",
+  "subscriptionsPage.customerData.heading": "Contact information",
   "subscriptionsPage.howItWorks1": "Create an order below",
   "subscriptionsPage.howItWorks2": "Wait for an email from the farmer with payment details",
   "subscriptionsPage.howItWorks3": "Make the payment",
   "subscriptionsPage.howItWorks4": "Wait for an email containing first delivery date",
   "subscriptionsPage.howItWorks5": "Pick up regular deliveries",
-  "subscription.subscriptions.heading": "Subscriptions",
+  "subscriptionsPage.note.placeholder": "For example, you can let the farmer know, what are your favorite vegetables, so he knows, what to grow more of and less of.\n\n\nFavorite vegetables: tomatoes, carrots, lettuce, cucumbers\n\nDisliked vegetables: celery stalks, dill",
+  "subscriptionsPage.noteHeading": "Note (feedback)",
+  "subscriptionsPage.selectPickupPointHeading": "Select pickup point",
+  "subscriptionsPage.selectSubscriptionHeading": "Select subscriptions",
+  "subscriptionsPage.submit.button": "Create order",
+  "subscriptionsPage.submit.success.text": "The order has been successfully sent to the farmer",
   "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
   "subscriptionsPage.subscriptionName": "Subscription name",
+  "subscriptionsTable.numberOfDeliveriesHeading": "Deliveries (pc)",
+  "subscriptionsTable.priceHeading": "Price",
+  "subscriptionsTable.pricePerDelivery.heading": "Price per delivery",
   "subscriptionsTable.pricingHeading": "Pricing",
   "tryItLater": "Try it again later.",
   "volunteers.heading": "Volunteers",
