implementing legal documents routes

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,4 +1,5 @@
 {
+  "legalDocument.privacyPolicy.heading": "Podmínky ochrany osobních údajů",
   "aboutFarm": "O Farmě",
   "accommodation.heading": "Ubytování",
   "address": "Adresa",
