implement delivery period and maximum number of deliveries

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -78,6 +78,11 @@
   "pickupPoint.empty.text": "Tato farma zatím nemá žádná odběrová místa",
   "pickupPoint.isFarmPickupPoint.name": "Odběr z farmy",
   "pickupPoint": "Odběrové místo",
+  "pickupPoint.deliveryPeriod.week": "Týden",
+  "pickupPoint.deliveryPeriod.twoWeeks": "Dva týdny",
+  "pickupPoint.deliveryPeriod.threeWeeks": "Tři týdny",
+  "pickupPoint.deliveryPeriod.fourWeeks": "Čtyři týdny",
+  "pickupPoint.deliveryPeriod.label": "Frekvence závozu",
   "pickupPoints": "Odběrová Místa",
   "pickupPointsPage.editDelete": "Editovat/Smazat",
   "postcode": "PSČ",
@@ -104,6 +109,10 @@
   "signUpPage.newsletterCheckbox": "Chci novinky od FarmedBy na email.",
   "somethingWentWrong": "Něco se porouchalo",
   "sortBy": "Řadit dle",
+  "subscription.maximumNumberOfDeliveries.label": "Maximální počet závozů v týdnech",
+  "subscription.maximumNumberOfDeliveries.helperText" : "Pro určení maximální objednávky se vydělí frekvencí odběrového místa.",
+  "subscription.minimumNumberOfDeliveries.helperText" : "Vypočítá se automaticky z ceníku níže.",
+  "subscription.minimumNumberOfDeliveries.label": "Minimální počet závozů",
   "subscription.calculator.heading": "Kalkulátor cen",
   "subscription.calculator.text": "Kontaktuj farmáře, pro vytvoření objednávky",
   "subscription.empty.text": "Tato farma zatím nemá žádné předplatné",
