--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -78,6 +78,11 @@
   "pickupPoint.empty.text": "This farm hasn't got any pickup point yet",
   "pickupPoint.isFarmPickupPoint.name": "Pickup from farm",
   "pickupPoint": "Pickup point",
+  "pickupPoint.deliveryPeriod.week": "Week",
+  "pickupPoint.deliveryPeriod.twoWeeks": "Two weeks",
+  "pickupPoint.deliveryPeriod.threeWeeks": "Three weeks",
+  "pickupPoint.deliveryPeriod.fourWeeks": "Four weeks",
+  "pickupPoint.deliveryPeriod.label": "Delivery frequency",
   "pickupPoints": "Pickup Points",
   "pickupPointsPage.editDelete": "Edit/Delete",
   "postcode": "Postcode",
@@ -104,6 +109,10 @@
   "signUpPage.newsletterCheckbox": "Subscribe to FarmedBy newsletter",
   "somethingWentWrong": "Something went wrong",
   "sortBy": "Sort by",
+  "subscription.maximumNumberOfDeliveries.label": "Maximum deliveries in weeks",
+  "subscription.minimumNumberOfDeliveries.label": "Minimum deliveries",
+  "subscription.maximumNumberOfDeliveries.helperText" : "It is divided by pickup point frequency, to determine maximum possible order.",
+  "subscription.minimumNumberOfDeliveries.helperText" : "Determined automatically from the pricing below.",
   "subscription.calculator.heading": "Price calculator",
   "subscription.calculator.text": "Contact the farmer to place an order",
   "subscription.empty.text": "This farm hasn't got any subscriptions yet",
