--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -111,18 +111,16 @@
   "somethingWentWrong": "Something went wrong",
   "sortBy": "Sort by",
   "subscription.endOfSeason.label": "End of season / orders",
-  "subscription.endOfSeason.helperText": "If provided, once \"End of season\" date is reached, the subscription won't be visible to customers anymore. Also if \"Maximum deliveries\" is not provided, end of season date will be used to determine the maximum possible order.",
-  "subscription.maximumNumberOfDeliveries.label": "Maximum deliveries in weeks",
+  "subscription.endOfSeason.helperText": "If provided, once \"End of season\" is reached, the subscription won't be visible to customers anymore. Also if \"Maximum deliveries\" is not provided, end of season date will be used to determine the maximum possible order, considering current date and frequency of selected pickup point.",
+  "subscription.maximumNumberOfDeliveries.label": "Maximum deliveries",
   "subscription.minimumNumberOfDeliveries.label": "Minimum deliveries",
-  "subscription.maximumNumberOfDeliveries.helperText" : "It is divided by pickup point frequency, to determine the maximum possible order.",
-  "subscription.minimumNumberOfDeliveries.helperText" : "Determined automatically from the pricing below.",
   "subscription.calculator.heading": "Price calculator",
   "subscription.calculator.text": "Contact the farmer to place an order",
   "subscription.empty.text": "This farm hasn't got any subscriptions yet",
   "subscription.enableOrderForm.alert": "Add pickup point or set farm as pickup point to enable subscription order form",
   "subscription.journal.placeholder": "The journal serves you as a farmer to document the progress of the order. The point is to have all necessary information in one place when preparing the delivery. The customer cannot see the journal\n\nUsage example:\n6/22/2021: First delivery\n6/29/2021: Second delivery\n7/6/2021: Third delivery\n7/13/2021: Customer requested to postpone one delivery because of a vacation\n7/20/2021: Fourth delivery\n...\n9/14/2021: Last delivery - order completed",
   "subscription.subscriptions.heading": "Subscriptions",
-  "subscriptionEditor.contentPlaceholder": "Various seasonal vegetables",
+  "subscriptionEditor.descriptionPlaceholder": "Various seasonal vegetables",
   "subscriptionEditor.heading": "Subscription editor",
   "subscriptionEditor.namePlaceholder": "Vegetables for 4",
   "subscriptionEditor.numberOfDeliveries": "From number of deliveries",
@@ -139,7 +137,7 @@
   "subscriptionsPage.selectSubscriptionHeading": "Select subscriptions",
   "subscriptionsPage.submit.button": "Create order",
   "subscriptionsPage.submit.success.text": "The order has been successfully sent to the farmer",
-  "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
+  "subscriptionsPage.subscriptionDescriptionHeading": "Description / content",
   "subscriptionsPage.subscriptionName": "Subscription name",
   "subscriptionsTable.numberOfDeliveriesHeading": "Deliveries (pc)",
   "subscriptionsTable.priceHeading": "Price",
