--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -111,18 +111,16 @@
   "somethingWentWrong": "Něco se porouchalo",
   "sortBy": "Řadit dle",
   "subscription.endOfSeason.label": "Konec sezóny / objednávek",
-  "subscription.endOfSeason.helperText": "Pokud zadáte datum \"Konec sezóny / objednávek\", tak se po jeho uplynutí, předplatné přestane zobrazovat zákazníkům. Zároveň pokud nebude zadán \"Maximální počet závozů\" bude datum použito k dopočítání maximální objednávky.",
-  "subscription.maximumNumberOfDeliveries.label": "Maximální počet závozů v týdnech",
-  "subscription.maximumNumberOfDeliveries.helperText" : "Pro určení maximální objednávky se vydělí frekvencí odběrového místa.",
-  "subscription.minimumNumberOfDeliveries.helperText" : "Vypočítá se automaticky z ceníku níže.",
-  "subscription.minimumNumberOfDeliveries.label": "Minimální počet závozů",
+  "subscription.endOfSeason.helperText": "Pokud zadáte datum \"Konec sezóny / objednávek\", tak se po jeho uplynutí, předplatné přestane zobrazovat zákazníkům. Zároveň pokud nebude zadán \"Maximální počet závozů\" bude datum použito k dopočítání maximální objednávky, s ohledem na současné datum a frekvenci zvoleného odběrového místa.",
+  "subscription.maximumNumberOfDeliveries.label": "Maximální počet závozů",
+  "subscription.minimumNumberOfDeliveries.label": "Minimum závozů",
   "subscription.calculator.heading": "Kalkulátor cen",
   "subscription.calculator.text": "Kontaktuj farmáře, pro vytvoření objednávky",
   "subscription.empty.text": "Tato farma zatím nemá žádné předplatné",
   "subscription.enableOrderForm.alert": "Přidej odběrové místo nebo povol odběry z farmy, pro zobrazení objednávkového formuláře předplatných",
   "subscription.journal.placeholder": "Deník slouží tobě jako farmáři, pro zaznamenávání vývoje objednávky a měl jsi tak všechny informace při přípravě odběrů na jednom místě. Zákazník deník nevidí.\n\nPříklad použití:\n22.6.2021: První závoz\n29.6.2021: Druhý závoz\n6.7.2021: Třetí závoz\n13.7.2021: Zákazník požádal o odložení závozu kvůli dovolené\n20.7.2021: Čtvrtý závoz\n...\n14.9.2021: Poslední závoz - objednávka dokončena",
   "subscription.subscriptions.heading": "Předplatné",
-  "subscriptionEditor.contentPlaceholder": "Různá sezonní zelenina",
+  "subscriptionEditor.descriptionPlaceholder": "Různá sezonní zelenina",
   "subscriptionEditor.heading": "Editor předplatného",
   "subscriptionEditor.namePlaceholder": "Velká zeleninová bedýnka",
   "subscriptionEditor.numberOfDeliveries": "Od počtu závozů",
@@ -139,7 +137,7 @@
   "subscriptionsPage.selectSubscriptionHeading": "Vyber předplatné",
   "subscriptionsPage.submit.button": "Odeslat objednávku",
   "subscriptionsPage.submit.success.text": "Objednávka byla úspěšně odeslána farmáři",
-  "subscriptionsPage.subscriptionContentHeading": "(Možný) obsah",
+  "subscriptionsPage.subscriptionDescriptionHeading": "Popis / obsah",
   "subscriptionsPage.subscriptionName": "Jméno předplatného",
   "subscriptionsTable.numberOfDeliveriesHeading": "Počet závozů (ks)",
   "subscriptionsTable.priceHeading": "Price",
